# cmdop-skill

./: README.md  pyproject.toml
examples/: publish-local.sh  publish-pypi.sh  scaffold_and_test.py
examples/test-scaffold-demo/: README.md  pyproject.toml  run.py
examples/test-scaffold-demo/skill/: config.py  readme.md
examples/test-scaffold-demo/src/test_scaffold_demo/: __init__.py  _skill.py
examples/test-scaffold-demo/tests/: conftest.py  test_test_scaffold_demo.py
examples/weather/: run.py
examples/weather/src/tool/: weather_api.py
src/cmdop_skill/: __init__.py  _arg.py  _cache.py  _cli.py  _cli_auth.py  _cli_config.py  _cli_dev.py  _cli_publish.py  _config.py  _manifest.py  _output.py  _parser.py  _publish.py  _pypi.py  _resolve.py  _skill.py  _skill_config.py  _testing.py  _types.py
src/cmdop_skill/api/: __init__.py  client.py  config.py
src/cmdop_skill/api/services/: __init__.py  skills.py
src/cmdop_skill/cli/: __init__.py  _auth.py  _config_cmd.py  _dev.py  _init_cmd.py  _publish_cmd.py  _release.py
src/cmdop_skill/scaffold/: __init__.py  _generator.py  _models.py  _wizard.py
src/cmdop_skill/scaffold/templates/: Makefile.j2  README.md.j2  conftest.py.j2  pyproject.toml.j2  skill_config.py.j2  skill_readme.md.j2  src_init.py.j2  test_placeholder.py.j2
tests/: conftest.py  test_arg.py  test_cache.py  test_integration.py  test_manifest.py  test_output.py  test_parser.py  test_publish.py  test_scaffold.py  test_skill.py  test_testing.py
