[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdop-skill"
version = "2026.4.7.2"
description = "Build and publish CMDOP skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CMDOP Team", email = "team@cmdop.com" }
]
keywords = [
    "cmdop",
    "skill",
    "cli",
    "framework",
    "automation",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "cmdop",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cmdop-skill = "cmdop_skill.cli:main"

[project.urls]
Homepage = "https://cmdop.com"
Documentation = "https://cmdop.com/docs/sdk/python-skill"
Repository = "https://github.com/commandoperator/cmdop-skill"
Issues = "https://github.com/commandoperator/cmdop-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cmdop_skill"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
